--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 				</div>
 
 				<span class="social-media">
-					<a href="#" class="twitter-sm">
+					<a href="https://dribbble.com/Anton_Ranestam" target="_blank" class="dribbble-sm">
 						<svg width="30px" height="30px" viewBox="0 0 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						    <defs>
 						        <linearGradient x1="104.742189%" y1="157.139917%" x2="13.7337608%" y2="-25.2042901%" id="linearGradient-1">
@@ -58,7 +58,7 @@
 						    </g>
 						</svg>
 					</a>
-					<a href="#" class="dribbble-sm">
+					<a href="http://www.twitter.com/anton_ranestam" target="_blank" class="twitter-sm">
 						<svg width="30px" height="25px" viewBox="0 0 30 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 						    <defs>
 						        <linearGradient x1="104.742189%" y1="157.139917%" x2="13.7337608%" y2="-25.2042901%" id="linearGradient-1">
@@ -222,7 +222,7 @@
 				</section>
 
 				<!-- Cases section -->
-				<section class="cases" id="cases">
+				<section class="cases og-show" id="cases">
 
 					<a href="#start" class="big-btn big-btn--up">
 						<?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -241,18 +241,18 @@
 					</a>
 
 					<nav class="cases__menu">
-						<button data-case="booking" class="btn-round active"></button>
-						<button data-case="og" class="btn-round"></button>
-						<button data-case="ess" class="btn-round"></button>
+						<button data-case="1" class="booking-case-anchor btn-round active"></button>
+						<button data-case="2" class="og-case-anchor btn-round"></button>
+						<button data-case="3" class="ess-case-anchor btn-round"></button>
 					</nav>
 
 					<div class="cases__wrapper">
 
-						<ul class="cases__wrapper__article">
+						<ul class="cases__wrapper__article section">
 
 							<li class="layer" data-depth="-1.00">
-								<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">booking system  <br /> for Malmös <br /> cultural life.</h3>
-								<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">booking system  <br /> for Malmös <br /> cultural life.</h3>
+								<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">booking system  <br /> for Malmös <br /> cultural life</h3>
+								<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">booking system  <br /> for Malmös <br /> cultural life</h3>
 							</li>
 
 							<li class="layer layer-index" data-depth="0.50">
@@ -357,6 +357,10 @@
 								</h2>
 							</li>
 						</ul>
+
+						<ul style="display: none;" class="section"></ul>
+
+						<ul class="section"></ul>
 					</div>
 				</section>
 
@@ -371,8 +375,8 @@
 								<ul class="cases__wrapper__article">
 
 									<li class="layer" data-depth="-1.00">
-										<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">booking system  <br /> for Malmös <br /> cultural life.</h3>
-										<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">booking system  <br /> for Malmös <br /> cultural life.</h3>
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__top-left">booking system  <br /> for Malmös <br /> cultural life</h3>
+										<h3 class="cases__wrapper__article__text cases__wrapper__article__bottom-right">booking system  <br /> for Malmös <br /> cultural life</h3>
 									</li>
 
 									<li class="layer layer-index" data-depth="0.50">
@@ -657,7 +661,7 @@
 									</li>
 
 									<li class="layer layer-index" data-depth="0.50">
-										<h1 class="case__title">European Spallation Source</h1>
+										<h1 class="case__title">European Spallation <br /> Source</h1>
 									</li>
 
 									<li class="layer" data-depth="2.00">
@@ -942,13 +946,13 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
 		<script src="assets/modernizr/modernizr.js"></script>
-		<script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+		<script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>
 		<script src="assets/parallax/jquery.parallax.min.js"></script>
 		<script src="assets/reveal/reveal.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 		<script src="assets/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js"></script>
-		<script src="assets/mousewheel/jquery.mousewheel.min.js"></script>
-		<script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>
+		<script src="assets/pagepiling/jquery.pagepiling.min.js"></script>
 		<script src="dist/js/bundle.js"></script>
 
 		<script>
